# ImKanji

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
cmake/: FindGlaze.cmake  FindPango.cmake  FindPlog.cmake  FindStb.cmake  FindVersion.cmake
resources/: cardbox.json  examples.json  hdata.json  icon.rc  kanji.json  words.json
resources/tex/: kanji_sorted_1-540.html  kanji_sorted_1-540.tex  tables.aux  tables.tex  tables.toc
src/: CMakeLists.txt  Cardbox.cpp  Cardbox.hpp  Flashcard.cpp  Flashcard.hpp  HData.cpp  HData.hpp  Platform.cpp  Platform.hpp  StbImage.cpp  StbImage.hpp  main.cpp  main_cmd.cpp
src/app/: AppLauncherLin.cpp  AppLauncherWin.cpp
src/data/: ArgParse.hpp  CMakeLists.txt  CmdConfig.cpp  CmdConfig.hpp  Flashcard.hpp  HData.cpp  HData.hpp  Platform.cpp  Platform.hpp  StbImage.hpp  Unicode.cpp  Unicode.hpp  version.cpp
src/data/app/: AppLauncherLin.cpp  AppLauncherLin.hpp  AppLauncherWin.cpp  AppLauncherWin.hpp
src/data/error/: BaseError.hpp  Console.cpp  Console.hpp  Exceptions.cpp  Exceptions.hpp  StdExceptions.hpp
src/error/: BaseError.hpp  Console.cpp  Console.hpp  Exceptions.cpp  Exceptions.hpp  StdExceptions.hpp
src/imgui/backends/: CMakeLists.txt
src/nfd/: CMakeLists.txt  FileDialog.cpp  FileDialog.hpp  nfd.h  nfd_gtk.cpp  nfd_win.cpp
src/windows/: CMakeLists.txt  ConfigWindow.cpp  ConfigWindow.hpp  FlashcardWindow.cpp  FlashcardWindow.hpp  GraphemeWindow.cpp  GraphemeWindow.hpp  Imgui.cpp  Imgui.hpp  LogWindow.cpp  LogWindow.hpp  MainMenuBar.cpp  MainMenuBar.hpp  MainWindow.cpp  MainWindow.hpp  Observable.hpp  Observer.hpp  TableWindow.cpp  TableWindow.hpp
src/windows/imgui/: CMakeLists.txt
src/windows/imgui/backends/: CMakeLists.txt
src/windows/nfd/: CMakeLists.txt
test/: CMakeLists.txt
